--- a/DoAn_Androids/app/build.gradle
+++ b/DoAn_Androids/app/build.gradle
@@ -27,13 +27,19 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-
+//Thêm đăng nhập facebook
+repositories {
+    mavenCentral()
+}
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.0'
+    //Thêm đăng nhập facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
