--- a/DoAn_Androids/app/build.gradle
+++ b/DoAn_Androids/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.squareup.moshi:moshi:1.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
