--- a/DoAn_Androids/app/gradle/wrapper/gradle-wrapper.properties
+++ b/DoAn_Androids/app/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Dec 24 13:01:54 GMT+07:00 2020
+#Wed Dec 02 16:35:01 ICT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
