--- a/DoAn_Androids/app/src/main/AndroidManifest.xml
+++ b/DoAn_Androids/app/src/main/AndroidManifest.xml
@@ -12,11 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Doan">
-        <activity android:name=".inclue_sport" />
+        <activity android:name=".DetailBaiviet"></activity>
         <activity
             android:name=".SigUp"
             android:parentActivityName=".Login" />
-        <activity android:name=".Login" />
+        <activity
+            android:name=".Login"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
