--- a/DoAn_Androids/app/build.gradle
+++ b/DoAn_Androids/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.squareup.moshi:moshi:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.android.volley:volley:1.1.1'
 }
