--- a/DoAn_Androids/app/src/main/AndroidManifest.xml
+++ b/DoAn_Androids/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Doan">
-        <activity android:name=".SearchActivity" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".PhanHoiNguoiDung"></activity>
+        <activity
+            android:name=".SearchActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".DetailBaiviet" />
         <activity
             android:name=".SigUp"
