--- a/DoAn_Androids/app/src/main/AndroidManifest.xml
+++ b/DoAn_Androids/app/src/main/AndroidManifest.xml
@@ -12,17 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Doan">
-        <activity android:name=".PhanHoiNguoiDung" android:parentActivityName=".MainActivity"></activity>
-        <activity
-            android:name=".SearchActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".DetailBaiviet" />
-        <activity
-            android:name=".SigUp"
-            android:parentActivityName=".Login" />
-        <activity
-            android:name=".Login"
-            android:parentActivityName=".MainActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +20,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NotificationDetail" ></activity>
+        <activity
+            android:name=".PhanHoiNguoiDung"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".SearchActivity"
+            android:parentActivityName=".MainActivity"  />
+        <activity android:name=".DetailBaiviet" />
+        <activity
+            android:name=".SigUp"
+            android:parentActivityName=".Login" />
+        <activity
+            android:name=".Login"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
